--- a/app/views/index/hello.html.erb
+++ b/app/views/index/hello.html.erb
@@ -36,6 +36,7 @@ This rails application was deployed with a single command to AWS.  What happens 
 <li>Let Puppet Master and Capistrano handle instance and app provisioning, respectively.</li>
 <li>Get better feedback on errors that may occur during this process.</li>
 <li>Introduce an Elastic Load Balancer and set autoscale to 2.</li>
+<li>Get a VPN tunnel to campus and access ND data</li>
 <li>Work toward automatic app redeployments triggered by git pushes.</li>
 </ol> 
 Onward!
