--- a/app/views/index/hello.html.erb
+++ b/app/views/index/hello.html.erb
@@ -20,7 +20,7 @@ font-family: arial, helvetica;
 <br/>
 
 <div class="content">
-This rails application was deployed with a single command to AWS.  What happens when it runs?  
+This rails application was deployed to AWS with a single command.  What happens when it runs?  
 <br/>
 <ol>
 <li>A shell script passes a CloudFormation template containing the instance and security group definitions to Boto.</li>
